[package]
name = "sortedlist-rs"
version = "0.1.1"
edition = "2021"
authors = ["Nick Liu <nicku5011@gmail.com>"]
repository = "https://github.com/nicku12345/sortedlist-rs"
description = "An implementation SortedList in rust."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"