[package]
name = "sortedlist-rs"
version = "0.1.3"
edition = "2021"
authors = ["Nick Liu <nicku5011@gmail.com>"]
repository = "https://github.com/nicku12345/sortedlist-rs"
description = "An efficient SortedList implementation in rust."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
rand = "0.8.5"
criterion = "0.4.0"

[[bench]]
name = "benchmark"
harness = false