[package]
name = "sortedlist-rs"
version = "0.2.3"
edition = "2021"
authors = ["Nick Liu <nicku5011@gmail.com>"]
repository = "https://github.com/nicku12345/sortedlist-rs"
description = "A fast sorted list data structure in rust."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
rand = "0.8.5"
criterion = { version = "0.4.0", features = ["html_reports"] }
rand_chacha = "0.3.1"

[[bench]]
name = "benchmark"
harness = false